Closed
Bug 36401
Opened 25 years ago
Closed 23 years ago
{ib} On mouseover, more links are 'created'
Categories
(Core :: Layout, defect, P3)
Tracking
()
RESOLVED
FIXED
M16
People
(Reporter: duncan, Assigned: waterson)
References
()
Details
(Whiteboard: [nsbeta2-]Design done. Expected landing date: 6/2/00)
Attachments
(6 files)
|
145 bytes,
text/html
|
Details | |
|
8.28 KB,
patch
|
Details | Diff | Splinter Review | |
|
10.81 KB,
patch
|
Details | Diff | Splinter Review | |
|
10.83 KB,
patch
|
Details | Diff | Splinter Review | |
|
6.01 KB,
text/plain
|
Details | |
|
74.74 KB,
image/gif
|
Details |
From Bugzilla Helper:
User-Agent: Mozilla/4.72 [en] (X11; U; Linux 2.2.14-5.0smp i686)
BuildID: 2000041805
On mouseover on the 'new kahimi karie stuff' link in the 13th paragraph, new
links (of the same text) are put into the beginning of the same paragraph.
URL = http://www.demon.co.uk/momus/thought190400.htm
Reproducible: Always
Steps to Reproduce:
1.Mouse-over on the link
2.see the paragraph warp!
3.repeat if nessisary
Actual Results: the paragraph will start to 'grow'
Expected Results: no more new text should be displayed
| Reporter | ||
Updated•25 years ago
|
confirmed.
this sounds familiar, I think an {ib) issue. nisheeth is handling {ib)
a minimized test case would sure help
sounds like a variant of 31986 (which i can't reopen!)
I tested the above URL with 2000-041908 and couldn't see the bug however. It
comes and goes.
Comment 3•25 years ago
|
||
Comment 4•25 years ago
|
||
the attached testcase definately shows the bug :) it's present on 2000041911 (linux)
Comment 5•25 years ago
|
||
Accepting bug and setting target milestone to M16...
Status: NEW → ASSIGNED
Target Milestone: --- → M16
| Reporter | ||
Comment 6•25 years ago
|
||
It's still here, in 2000050513
Comment 7•25 years ago
|
||
Is this going to get fixed in M16? I think it's a beta2-worthy bug.
Keywords: nsbeta2
added {ib} marker. I think this whole class of problem should be addressed for
beta2 in M17. Nisheeth has a design for a solution for the basic problem, and
once that's in place the individual bugs should be easy kills.
Summary: On mouseover, more links are 'created' → {ib} On mouseover, more links are 'created'
Comment 9•25 years ago
|
||
Updating status whiteboard...
Whiteboard: Design done. Expected landing date: 6/2/00
| Assignee | ||
Updated•25 years ago
|
Status: NEW → ASSIGNED
Comment 11•25 years ago
|
||
Putting on [nsbeta2-] radar.
Keywords: helpwanted
Whiteboard: Design done. Expected landing date: 6/2/00 → [nsbeta2-]Design done. Expected landing date: 6/2/00
| Assignee | ||
Comment 12•25 years ago
|
||
| Assignee | ||
Comment 13•25 years ago
|
||
Somebody sanity check me:
- removed kooky inline block calls from the nsCSSFrameConstructor interface.
- Store "next special frame" rather than "am I special" in the frame
properties.
The hacks are raw. Let me know if I'm going someplace bad.
| Assignee | ||
Comment 14•25 years ago
|
||
| Assignee | ||
Comment 15•25 years ago
|
||
Newer, stronger patch.
- Use an nsFrameState bit to remember if we're "special".
- Set the bit across the siblings when marking "special".
- Only check bit when asking if "special" (don't follow linked list back).
- Follow linked list when trying to lookup special sibling.
buster, nisheeth: please criticize!
| Assignee | ||
Comment 16•25 years ago
|
||
| Assignee | ||
Comment 17•25 years ago
|
||
| Assignee | ||
Comment 18•25 years ago
|
||
fix checked in, r=nisheeth,buster
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 19•25 years ago
|
||
yay, it's fixed in Linux 2000052520.
thanks guys.
Comment 20•25 years ago
|
||
yep, this looks like it's fixed. great job, chris!
Comment 21•25 years ago
|
||
*** Bug 32518 has been marked as a duplicate of this bug. ***
Comment 23•23 years ago
|
||
I'm seeing this on http://www.spymac.com/ in Phoenix .5
Status: VERIFIED → REOPENED
Resolution: FIXED → ---
Comment 24•23 years ago
|
||
Comment 25•23 years ago
|
||
that's probably bug 177539. If not, then it's a new bug
this bug is FIXED
Status: REOPENED → RESOLVED
Closed: 25 years ago → 23 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•