Bug 36401. Deal with inline-blocks better. Add nsFrameState bit that indicates whether or not a frame is part of a 'special' inline-block hierarchy; use the 'inlineFrameAnnotation' property to remember the next 'special sibling' so that we can traverse correctly; pull methods out of nsCSSFrameConstructor's public API. r=nisheeth,buster